# a-rustcms-backend

./: .env.example  .gitignore  Cargo.toml  README.md  RustPress.postman_collection.json
.sqlx/: query-062d7e4814936284580462952dbb73654f1af010624b7a4cb7091b8cb2886eea.json  query-1363e5b70676e78f12baf3ccb010c338242f7b28ac52d2577aa800e0b33a6dfc.json  query-1cf87f4e25e6a7007eaebc27544c37f8eb46d8d22b9e686b6495b42f19ec38a1.json  query-20fdb0174cc8a2e087212ed2d0144cb9ceae457823687eecab4ad09b29013e58.json  query-22fb8a332c252c7a438cc08d406bd2cd9cdcf3cb487d390684434bbfa3ad5c8c.json  query-238faa7f7cf5952c631f9bb8095c4c8f754824abf83f33cfec57daaf90b76e65.json  query-2d4f5b83142c9edac4f1376547260be9358777ffee01470b1db005ea8820788e.json  query-303f834952f2da7d611ece34a6c8414dd91ef358586b86f33736791c0d1f7e64.json  query-3617d7ad5532392c985a1b853eb5d49608e864e537a144530afe14bd722b886a.json  query-3885a549e978def731e146238054e8ac45c64c63d0662458bd6ee9c3e109095b.json  query-627a01109553bb6d8e17acbedbe754097d3a01ed5c18bbcd771eebc7ac790ba9.json  query-62b84c1413fb75523532b1281b918be6210781705518c742b1379bd1f1fccbe5.json  query-73a17d8982d4fe5e0931b6234f312d1d25ba167e12385c49f05be7cc33c70212.json  query-7cc1044a1aaaea05baccc4e9250854f156c549ede930ec3ad1df0429ed8271f9.json  query-8055e5a1d46dffd4de6b753db88bd8e721e44ef476d66f0606508979c47ab86c.json  query-80bb9d142642c599016fe7c37b4dbbf0558e9d49999a2c15af2f8507e6d52014.json  query-83a69245832e2304bc142f2983950ca023e297b2e38993e8ef3ac5ace0e0854b.json  query-8945d175fd7dce6d6479906d26df3d50ac2f84187e3510386a675e0268b00a66.json  query-8d3716e5eaaea3b7ede3c494511e8a37d6f0745647a8295b619285c7e8e3d15e.json  query-9ffb9a07f06b9c322836a1698805445f926ee0ae2c82f371a91439851c5623b4.json  query-a6862c0eda3c55d04c36b271295a6ef8c7ce12fa9dfa7476d593a39ee23b9870.json  query-acce06112e0f2c795cc8063c141d29c8f9a82622e9423a488186a15ca5e2fbd9.json  (+11 more)
migrations/: 20240722144210_init.up.sql  (+12 more)
(+178 files in other folders)
