[package]
name = "rustpress_api"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
ntex-cors = "2.0"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "time",
] }
http = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
